--- a/form.html
+++ b/form.html
@@ -1,58 +1,109 @@
- <body  bgcolor="grey">
+<html>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap" rel="stylesheet">
 <style>
-        #d1 {
-		 background-color: antiquewhite;
-            background: antiquewhite;
-            width: 100%;
-            height: 30%;
-            color: rgb(10, 3, 17);
-            background-color: blueviolet;
-            border-radius: 10px;
-        } 
-	#d2 {
-		 background-color: antiquewhite;
-            background: antiquewhite;
-            width: 100%;
-            height: 30%;
-            color: rgb(10, 3, 17);
-            background-color: blueviolet;
-            border-radius: 10px;
-        }
-
-    </style>
-<script>
-
-        function kd() {
-	    let cname = document.getElementById("in1").value;
-	    let cimg = document.getElementById("s1").value;
-            const xhttp = new XMLHttpRequest();
-            xhttp.onload = function () {
-                document.getElementById("d1").innerHTML = this.responseText;
-            }
-            xhttp.open("GET", "http://65.2.137.189:3000/output?cname="+ cname +"&img=" + cimg);
-            xhttp.send();
-        }
-        function ps() {
-            const xhttp = new XMLHttpRequest();
-            xhttp.onload = function () {
-                document.getElementById("d2").innerHTML = this.responseText;
-            }
-            xhttp.open("GET", "http://65.2.137.189:3000/info");
-            xhttp.send();
-        }
-        function inspect() {
-            const xhttp = new XMLHttpRequest();
-            xhttp.onload = function () {
-                document.getElementById("d3").innerHTML = this.responseText;
-            }
-            xhttp.open("GET", "http://65.2.137.189:3000/inspect" );
-            xhttp.send();
-        }
-    </script>
+    *{
+   margin: 0%;
+   padding: 0%;
+   /* font-family: 'Poppins', sans-serif; */
+   box-sizing: border-box;
+}
 
 
+.heading {
+   padding:10px ;
+    background-color: #0db7ed;
+    font-size: 20px;
+}
 
-    <marquee id="m1" behavior="" direction="">
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
+}
+
+.data-div{
+    background-color: #0db7ed;
+    margin: 20px;
+    padding:10px;
+    width:390px;
+    height: 80px;
+}
+
+.data-div p{
+    margin:10px;
+    font-size: 20px;
+}
+
+.box-div{
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+.Form-cont{
+    width:50%;
+    height:300px;
+    /* margin:10px; */
+    background-color: gray;
+    padding: 10px;
+}
+.instance-id-div{
+    width:50%;
+    background-color: gray;
+    height:300px;
+    margin:10px;
+    padding: 10px;
+}
+
+.Form-cont form  {
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     padding:10px;
+}
+form input {
+    margin:10px 0 10px 0 ;
+    padding: 5px;
+}
+
+form select{
+    margin:10px 0 10px 0 ;
+    padding: 5px;
+}
+
+form button {
+    margin:10px 0 10px 0 ;
+    padding: 5px;
+    background-color: #0db7ed;
+    border: none;
+    border-radius: 5px;
+}
+
+.runnig-cont-div{
+    background-color: gray;
+    /* width:100%; */
+    height:200px;
+    padding:10px;
+}
+
+.m-xl{
+    margin:10px 20px 10px 20px ;
+}
+</style>
+</head>
+<body>
+<script src="./script.js"></script>
+
+
+
+    <!-- <marquee id="m1" behavior="" direction="">
         <h1>Welcome to my container Service <br></h1>
     </marquee>
     <h1>Please Select The Choice</h1>
@@ -71,8 +122,61 @@
     <br/>
     <b>Inspect Here</b>
     <button onclick="inspect()">Click Me</button>
+    <div id="d3" ></div> -->
+
+    <!--  -->
+    <header>
+        <p class="heading">
+            DockerManagementTool
+        </p>
+    </header>
+    <div class="m-xl">
+    <div class="flex">
+        <div class="data-div">Total Containers
+            <p>T-cont</p>
+        </div>
+        <div class="data-div">Running Container
+            <p>R-cont</p>
+        </div>
+        <div class="data-div">Ip Address 
+            <p >IP</p>
+        </div>
+    </div>
+    <div class="box-div">
+        <div class="Form-cont">
+            <form>
+                <label >
+                    Enter Container Name :-
+                </label>
+                <input type="text" placeholder="Container Name" name="cname" id="in1"/>
+                <label>Chosse Container Image :-</label>
+                <select id="s1" name="img">
+                    <option value="centos">
+                       CentOS 
+                    </option>
+                    <option value="ubuntu">
+                        ubuntu 
+                    </option>
+                    <option value="httpd">
+                        httpd
+                    </option>
+                </select>
+                <button  onclick="kd()">Create Container</button>
+            </form>
+        </div>
+        <div class="instance-id-div">
+            <div id="d1" >akjshkdhkah</div>
+        </div>
+    </div>
+    <div class="runnig-cont-div">
+        <p>All Running Containers</p>
+        <div id="d2" ></div>
+    </div>
+    <div>
+        <button onclick="inspect()">Get Docker Info</button>
     <div id="d3" ></div>
+    </div>
+    </div>
+</body>
 
-
-    <body/>
-
+    </html>
