--- a/form.html
+++ b/form.html
@@ -1,8 +1,8 @@
- <body  bgcolor="grey">
+ <body  bgcolor="black">
 <style>
         #d1 {
-		 background-color: antiquewhite;
-            background: antiquewhite;
+		 background-color: lightblue;
+            background: white;
             width: 100%;
             height: 30%;
             color: rgb(10, 3, 17);
@@ -29,7 +29,7 @@
             xhttp.onload = function () {
                 document.getElementById("d1").innerHTML = this.responseText;
             }
-            xhttp.open("GET", "http://65.2.137.189:3000/output?cname="+ cname +"&img=" + cimg);
+            xhttp.open("GET", "http://44.201.198.82:3000/output?cname="+ cname +"&img=" + cimg);
             xhttp.send();
         }
         function ps() {
@@ -37,7 +37,7 @@
             xhttp.onload = function () {
                 document.getElementById("d2").innerHTML = this.responseText;
             }
-            xhttp.open("GET", "http://65.2.137.189:3000/info");
+            xhttp.open("GET", "http://44.201.198.82:3000/info");
             xhttp.send();
         }
         function inspect() {
@@ -45,7 +45,7 @@
             xhttp.onload = function () {
                 document.getElementById("d3").innerHTML = this.responseText;
             }
-            xhttp.open("GET", "http://65.2.137.189:3000/inspect" );
+            xhttp.open("GET", "http://44.201.198.82:3000/inspect" );
             xhttp.send();
         }
     </script>
